syntax = "proto3";

package user;

option go_package = "proto/user";

message User {
    string id = 1;
    string name = 2;
    string email = 3;
};

service UserService {
    rpc GetUser (stream User) returns (stream User);
    rpc CreateUser (stream User) returns (stream User);
}
